style: add overflow hidden to body to prevent extending element due to Cursor movement

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,11 @@
 
 @import "@liveblocks/react-comments/styles.css";
 
+/* added to prevent scrollX or ScrollY */
+body {
+  overflow: hidden;
+}
+
 * {
   font-family: work sans, sans-serif;
 }
